[gd_scene load_steps=6 format=3 uid="uid://b4ob3fc0v04dc"]

[ext_resource type="Script" uid="uid://d12cw6umqf4gk" path="res://fishing_minigame.gd" id="1_cx6uu"]
[ext_resource type="AudioStream" uid="uid://m8bkqj0chprb" path="res://audio/hook_sucess.wav" id="2_lmc8y"]
[ext_resource type="AudioStream" uid="uid://dkjsegyj8b3oo" path="res://audio/splash_hit.wav" id="3_edgh5"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_i8xx5"]
noise_type = 2
frequency = 0.0668
offset = Vector3(1000, 7.25, 0)
fractal_octaves = 6
fractal_lacunarity = 3.08
fractal_gain = 0.07
fractal_weighted_strength = 1.0
cellular_distance_function = 1
cellular_jitter = 1.23
cellular_return_type = 3
domain_warp_enabled = true
domain_warp_type = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cx6uu"]
width = 20
height = 100
noise = SubResource("FastNoiseLite_i8xx5")

[node name="fishingMinigame" type="CanvasLayer"]
script = ExtResource("1_cx6uu")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -52.0
offset_right = 12.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="BackgroundBar" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("NoiseTexture2D_cx6uu")

[node name="SuccessZone" type="ColorRect" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.671821, 0, 0.0281098, 1)

[node name="MovingBar" type="ColorRect" parent="PanelContainer"]
custom_minimum_size = Vector2(10, 5)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="sucess" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lmc8y")
volume_db = -5.0
pitch_scale = 1.45

[node name="fail" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lmc8y")
volume_db = -5.0
pitch_scale = 0.73

[node name="start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_edgh5")
volume_db = -8.0
pitch_scale = 0.34
